samples/_failures_safe/1761454614_06da69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_153ea813.c: In function ‘handle_error’:
./samples/SAFE/__tmp_153ea813.c:136:5: error: expected expression at end of input
  136 |     ctx->input_length =
      |     ^~~
./samples/SAFE/__tmp_153ea813.c:136:5: error: expected declaration or statement at end of input
